--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@collboard/pdf-support",
-    "version": "1.0.0",
-    "description": "(draft of) Support for PDF documents for Collboard.com created via @collboard/modules-sdk.",
+    "name": "@collboard/zip-support",
+    "version": "0.1.0",
+    "description": "Support for ZIP archives for Collboard.com created via @collboard/modules-sdk.",
     "license": "SEE LICENSE IN LICENSE",
     "contributors": [
         "Pavol Hejný <pavol.hejny@collboard.com> (https://collboard.com/-/about/team)",
