--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "devDependencies": {
         "@collboard/modules-sdk": "18.37.0",
         "destroyable": "^0.9.0",
+        "jszip": "^3.8.0",
         "tslint": "6.1.3",
         "waitasecond": "1.9.0",
         "xyzt": "^5.1.0"
