--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@collboard/zip-support",
   "version": "1.0.30",
-  "description": "Support for ZIP archives for Collboard.com created via @collboard/modules-sdk. See all file support modules for Collboard.",
+  "description": "Support for ZIP archives for Collboard.com See all file support modules for Collboard.",
   "license": "SEE LICENSE IN LICENSE",
   "contributors": [
     "Pavol Hejný <pavol.hejny@collboard.com> (https://collboard.com/-/about/team)"
