--- a/package.json
+++ b/package.json
@@ -1,30 +1,1 @@
-{
-    "name": "@collboard/zip-support",
-    "version": "1.0.144",
-    "description": "Support for ZIP archives for Collboard.com See all file support modules for Collboard.",
-    "license": "SEE LICENSE IN LICENSE",
-    "contributors": [
-        "Pavol Hejný <pavol.hejny@collboard.com> (https://collboard.com/-/about/team)"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/collboard/zip-support"
-    },
-    "private": false,
-    "scripts": {
-        "start": "colldev develop",
-        "test": "colldev test",
-        "lint": "tslint -p tsconfig.json",
-        "preversion": "npm run lint && npm test",
-        "postversion": "git push && git push --tags"
-    },
-    "dependencies": {},
-    "devDependencies": {
-        "@collboard/modules-sdk": "34.3.0",
-        "destroyable": "0.9.0",
-        "jszip": "3.8.0",
-        "tslint": "6.1.3",
-        "waitasecond": "1.9.0",
-        "xyzt": "5.1.0"
-    }
-}
+undefined
