--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
         "preversion": "npm run lint && npm test",
         "postversion": "git push && git push --tags"
     },
-    "dependencies": {},
     "devDependencies": {
         "@collboard/modules-sdk": "35.11.500",
         "destroyable": "0.9.0",
         "jszip": "3.8.0",
         "tslint": "6.1.3",
-        "waitasecond": "1.9.0",
+        "waitasecond": "^1.11.1",
         "xyzt": "5.1.0"
     }
 }
