--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
         "jszip": "3.8.0",
         "tslint": "6.1.3",
         "waitasecond": "^1.11.1",
-        "xyzt": "5.1.0"
+        "xyzt": "^5.4.0"
     }
 }
