--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     },
     "devDependencies": {
         "@collboard/modules-sdk": "35.11.500",
-        "destroyable": "0.9.0",
+        "destroyable": "^0.12.0",
         "jszip": "3.8.0",
         "tslint": "6.1.3",
         "waitasecond": "^1.11.1",
