--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     },
     "devDependencies": {
         "@collboard/modules-sdk": "35.11.500",
-        "destroyable": "^0.12.0",
+        "destroyable": "0.12.0",
         "jszip": "3.8.0",
         "tslint": "6.1.3",
-        "waitasecond": "^1.11.1",
-        "xyzt": "^5.4.0"
+        "waitasecond": "1.11.1",
+        "xyzt": "5.4.0"
     }
 }
