--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     },
     "devDependencies": {
         "@collboard/modules-sdk": "35.11.900",
-        "destroyable": "^0.12.7",
+        "destroyable": "0.12.7",
         "jszip": "3.8.0",
         "tslint": "6.1.3",
-        "waitasecond": "^1.11.21",
-        "xyzt": "^5.4.2"
+        "waitasecond": "1.11.21",
+        "xyzt": "5.4.2"
     }
 }
