--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "destroyable": "0.12.7",
         "jszip": "3.8.0",
         "tslint": "6.1.3",
-        "waitasecond": "1.11.21",
+        "waitasecond": "^1.11.23",
         "xyzt": "5.4.2"
     }
 }
